--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,12 @@
   text-align: center;
   border: 1px solid greenyellow;
 }
+
+.linksContainer {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.myLink {
+  margin-right: 20px;
+}
